--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "react/event-loop": "0.5.0"
+        "react/event-loop": "0.5.0",
+        "react/stream": "0.7.7"
     }
 }
