--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "react/event-loop": "0.5.0",
-        "react/stream": "0.7.7"
+        "react/stream": "0.7.7",
+        "react/promise": "2.5.1"
     }
 }
