--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "react/event-loop": "0.5.0",
         "react/stream": "0.7.7",
-        "react/promise": "2.5.1"
+        "react/promise": "2.5.1",
+        "react/socket": "0.8.11"
     }
 }
